# CppWorkbench-compiler

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
codegen/: AssemblyGenerator.cpp  AssemblyGenerator.h
lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
parser/: AST.cpp  AST.h  CFG.cpp  CFG.h  Parser.cpp  Parser.h  grammar.txt
tests/: test_cfg.cc
tests/integration/: integration_tests.py
tests/integration/basic_tests/: expected.json  missingparen.cpp  newlines.cpp  noentrypoint.cpp  spaces.cpp
tools/: debug.h
